assignment/assignment2/assignment2-ref/initial/target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Var'", "'Body'", "'Else'", "'EndFor'", 
                     "'If'", "'EndDo'", "'Break'", "'ElseIf'", "'EndWhile'", 
                     "'Parameter'", "'While'", "'Continue'", "'EndBody'", 
                     "'For'", "'Return'", "'True'", "'Do'", "'EndIf'", "'Function'", 
                     "'Then'", "'False'", "<INVALID>", "<INVALID>", "'='", 
                     "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", "'\\'", 
                     "'\\.'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", "'>.'", 
                     "'<=.'", "'>=.'", "'('", "')'", "'['", "']'", "':'", 
                     "'.'", "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "VAR", "BODY", "ELSE", "ENDFOR", "IF", 
                      "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", "PARAMETER", 
                      "WHILE", "CONTINUE", "ENDBODY", "FOR", "RETURN", "TRUE", 
                      "DO", "ENDIF", "FUNCTION", "THEN", "FALSE", "WS", 
                      "COMMENT", "ASSIGN", "ADD", "ADDFLOAT", "SUB", "SUBFLOAT", 
                      "MUL", "MULFLOAT", "DIV", "DIVFLOAT", "MOD", "NOT", 
                      "AND", "OR", "EQUAL", "NOTEQUAL", "LESS", "GREATER", 
                      "LESSEQUAL", "GREATEREQUAL", "EQUALFLOAT", "LESSFLOAT", 
                      "GREATERFLOAT", "LESSEQUALFLOAT", "GREATEREQUALFLOAT", 
                      "LP", "RP", "LA", "RA", "COLON", "DOT", "COMMA", "SEMI", 
                      "LB", "RB", "ID", "INTLIT", "FLOATLIT", "STRINGLIT", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_globdeclpart = 1
    RULE_funcdeclspart = 2
    RULE_vardecls = 3
    RULE_varlist = 4
    RULE_tailvar = 5
    RULE_variableinit = 6
    RULE_literals = 7
    RULE_arraydecls = 8
    RULE_arraylit = 9
    RULE_arraylit_ = 10
    RULE_dimlist = 11
    RULE_taildim = 12
    RULE_dim = 13
    RULE_funcdecls = 14
    RULE_parameterlist = 15
    RULE_parameterlist_ = 16
    RULE_parameter = 17
    RULE_relop = 18
    RULE_expr = 19
    RULE_expr1 = 20
    RULE_expr2 = 21
    RULE_expr3 = 22
    RULE_expr4 = 23
    RULE_expr5 = 24
    RULE_expr6 = 25
    RULE_expr7 = 26
    RULE_functioncall = 27
    RULE_argumentslist = 28
    RULE_argumentslist_ = 29
    RULE_statement = 30
    RULE_assignmentstmt = 31
    RULE_ifstmt = 32
    RULE_if_statement = 33
    RULE_elif_statement = 34
    RULE_else_statement = 35
    RULE_forstmt = 36
    RULE_whilestmt = 37
    RULE_dowhilestmt = 38
    RULE_breakstmt = 39
    RULE_continuestmt = 40
    RULE_callstmt = 41
    RULE_returnstmt = 42

    ruleNames =  [ "program", "globdeclpart", "funcdeclspart", "vardecls", 
                   "varlist", "tailvar", "variableinit", "literals", "arraydecls", 
                   "arraylit", "arraylit_", "dimlist", "taildim", "dim", 
                   "funcdecls", "parameterlist", "parameterlist_", "parameter", 
                   "relop", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "functioncall", "argumentslist", 
                   "argumentslist_", "statement", "assignmentstmt", "ifstmt", 
                   "if_statement", "elif_statement", "else_statement", "forstmt", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "callstmt", "returnstmt" ]

    EOF = Token.EOF
    VAR=1
    BODY=2
    ELSE=3
    ENDFOR=4
    IF=5
    ENDDO=6
    BREAK=7
    ELSEIF=8
    ENDWHILE=9
    PARAMETER=10
    WHILE=11
    CONTINUE=12
    ENDBODY=13
    FOR=14
    RETURN=15
    TRUE=16
    DO=17
    ENDIF=18
    FUNCTION=19
    THEN=20
    FALSE=21
    WS=22
    COMMENT=23
    ASSIGN=24
    ADD=25
    ADDFLOAT=26
    SUB=27
    SUBFLOAT=28
    MUL=29
    MULFLOAT=30
    DIV=31
    DIVFLOAT=32
    MOD=33
    NOT=34
    AND=35
    OR=36
    EQUAL=37
    NOTEQUAL=38
    LESS=39
    GREATER=40
    LESSEQUAL=41
    GREATEREQUAL=42
    EQUALFLOAT=43
    LESSFLOAT=44
    GREATERFLOAT=45
    LESSEQUALFLOAT=46
    GREATEREQUALFLOAT=47
    LP=48
    RP=49
    LA=50
    RA=51
    COLON=52
    DOT=53
    COMMA=54
    SEMI=55
    LB=56
    RB=57
    ID=58
    INTLIT=59
    FLOATLIT=60
    STRINGLIT=61
    ILLEGAL_ESCAPE=62
    UNCLOSE_STRING=63
    UNTERMINATED_COMMENT=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globdeclpart(self):
            return self.getTypedRuleContext(BKITParser.GlobdeclpartContext,0)


        def funcdeclspart(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclspartContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.globdeclpart()
            self.state = 87
            self.funcdeclspart()
            self.state = 88
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobdeclpartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecls(self):
            return self.getTypedRuleContext(BKITParser.VardeclsContext,0)


        def globdeclpart(self):
            return self.getTypedRuleContext(BKITParser.GlobdeclpartContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_globdeclpart

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobdeclpart" ):
                return visitor.visitGlobdeclpart(self)
            else:
                return visitor.visitChildren(self)




    def globdeclpart(self):

        localctx = BKITParser.GlobdeclpartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globdeclpart)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.vardecls()
                self.state = 91
                self.globdeclpart()
                pass
            elif token in [BKITParser.EOF, BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclspartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecls(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclsContext,0)


        def funcdeclspart(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclspartContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdeclspart

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdeclspart" ):
                return visitor.visitFuncdeclspart(self)
            else:
                return visitor.visitChildren(self)




    def funcdeclspart(self):

        localctx = BKITParser.FuncdeclspartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdeclspart)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.funcdecls()
                self.state = 97
                self.funcdeclspart()
                pass
            elif token in [BKITParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def varlist(self):
            return self.getTypedRuleContext(BKITParser.VarlistContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_vardecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecls" ):
                return visitor.visitVardecls(self)
            else:
                return visitor.visitChildren(self)




    def vardecls(self):

        localctx = BKITParser.VardeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BKITParser.VAR)
            self.state = 103
            self.match(BKITParser.COLON)
            self.state = 104
            self.varlist()
            self.state = 105
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableinit(self):
            return self.getTypedRuleContext(BKITParser.VariableinitContext,0)


        def tailvar(self):
            return self.getTypedRuleContext(BKITParser.TailvarContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = BKITParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varlist)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.variableinit()
                self.state = 108
                self.tailvar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.variableinit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TailvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def variableinit(self):
            return self.getTypedRuleContext(BKITParser.VariableinitContext,0)


        def tailvar(self):
            return self.getTypedRuleContext(BKITParser.TailvarContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_tailvar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTailvar" ):
                return visitor.visitTailvar(self)
            else:
                return visitor.visitChildren(self)




    def tailvar(self):

        localctx = BKITParser.TailvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tailvar)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(BKITParser.COMMA)
                self.state = 114
                self.variableinit()
                self.state = 115
                self.tailvar()
                pass
            elif token in [BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableinitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literals(self):
            return self.getTypedRuleContext(BKITParser.LiteralsContext,0)


        def dimlist(self):
            return self.getTypedRuleContext(BKITParser.DimlistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variableinit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableinit" ):
                return visitor.visitVariableinit(self)
            else:
                return visitor.visitChildren(self)




    def variableinit(self):

        localctx = BKITParser.VariableinitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableinit)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(BKITParser.ID)
                self.state = 122
                self.match(BKITParser.ASSIGN)
                self.state = 123
                self.literals()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(BKITParser.ID)
                self.state = 125
                self.dimlist()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.match(BKITParser.ID)
                self.state = 127
                self.dimlist()
                self.state = 128
                self.match(BKITParser.ASSIGN)
                self.state = 129
                self.literals()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def STRINGLIT(self):
            return self.getToken(BKITParser.STRINGLIT, 0)

        def arraydecls(self):
            return self.getTypedRuleContext(BKITParser.ArraydeclsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiterals" ):
                return visitor.visitLiterals(self)
            else:
                return visitor.visitChildren(self)




    def literals(self):

        localctx = BKITParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_literals)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(BKITParser.INTLIT)
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(BKITParser.FALSE)
                pass
            elif token in [BKITParser.TRUE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.match(BKITParser.TRUE)
                pass
            elif token in [BKITParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.match(BKITParser.STRINGLIT)
                pass
            elif token in [BKITParser.LB]:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.arraydecls()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def arraylit(self):
            return self.getTypedRuleContext(BKITParser.ArraylitContext,0)


        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_arraydecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecls" ):
                return visitor.visitArraydecls(self)
            else:
                return visitor.visitChildren(self)




    def arraydecls(self):

        localctx = BKITParser.ArraydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arraydecls)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(BKITParser.LB)
            self.state = 142
            self.arraylit()
            self.state = 143
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literals(self):
            return self.getTypedRuleContext(BKITParser.LiteralsContext,0)


        def arraylit_(self):
            return self.getTypedRuleContext(BKITParser.Arraylit_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = BKITParser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arraylit)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.TRUE, BKITParser.FALSE, BKITParser.LB, BKITParser.INTLIT, BKITParser.FLOATLIT, BKITParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.literals()
                self.state = 146
                self.arraylit_()
                pass
            elif token in [BKITParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arraylit_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def literals(self):
            return self.getTypedRuleContext(BKITParser.LiteralsContext,0)


        def arraylit_(self):
            return self.getTypedRuleContext(BKITParser.Arraylit_Context,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arraylit_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit_" ):
                return visitor.visitArraylit_(self)
            else:
                return visitor.visitChildren(self)




    def arraylit_(self):

        localctx = BKITParser.Arraylit_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arraylit_)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(BKITParser.COMMA)
                self.state = 152
                self.literals()
                self.state = 153
                self.arraylit_()
                pass
            elif token in [BKITParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dim(self):
            return self.getTypedRuleContext(BKITParser.DimContext,0)


        def taildim(self):
            return self.getTypedRuleContext(BKITParser.TaildimContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dimlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimlist" ):
                return visitor.visitDimlist(self)
            else:
                return visitor.visitChildren(self)




    def dimlist(self):

        localctx = BKITParser.DimlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dimlist)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.dim()
                self.state = 159
                self.taildim()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.dim()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TaildimContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dim(self):
            return self.getTypedRuleContext(BKITParser.DimContext,0)


        def taildim(self):
            return self.getTypedRuleContext(BKITParser.TaildimContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_taildim

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTaildim" ):
                return visitor.visitTaildim(self)
            else:
                return visitor.visitChildren(self)




    def taildim(self):

        localctx = BKITParser.TaildimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_taildim)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.LA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.dim()
                self.state = 165
                self.taildim()
                pass
            elif token in [BKITParser.BODY, BKITParser.ASSIGN, BKITParser.COMMA, BKITParser.SEMI]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LA(self):
            return self.getToken(BKITParser.LA, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RA(self):
            return self.getToken(BKITParser.RA, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_dim

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDim" ):
                return visitor.visitDim(self)
            else:
                return visitor.visitChildren(self)




    def dim(self):
